--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,18 @@
 <mat-toolbar color="primary">
-    <span>Misafirhane Uygulaması</span>
+    <span>Misafirhane</span>
+      <!-- Ortada navigasyon linkleri -->
+  <span class="nav-links">
+
+    <a mat-button routerLink="/dashboard" routerLinkActive="active-link">Dashboard</a>
+    <a mat-button routerLink="/users" routerLinkActive="active-link">Kullanıcılar</a>
+    <a mat-button routerLink="/misafirhane" routerLinkActive="active-link">Misafirhaneler</a>
+    <a mat-button routerLink="/oda" routerLinkActive="active-link">Odalar</a>
+    <a mat-button routerLink="/reservations" routerLinkActive="active-link">Rezervasyonlar</a>
+  </span>
     <span class="spacer"></span>
     <!-- Eğer currentUser varsa, giriş yapılmış demektir -->
     <ng-container *ngIf="authService.currentUser(); else loggedOut">
-      <span>Merhaba, {{ authService.currentUser()?.adSoyad }}</span>
+      <span class="username">Merhaba, {{ authService.currentUser()?.adSoyad }}</span>
       <button mat-button (click)="onLogout()">Çıkış Yap</button>
     </ng-container>
     <!-- Giriş yapılmamışsa -->
